--- a/src/styles/styleCreateComment.css
+++ b/src/styles/styleCreateComment.css
@@ -1,5 +1,17 @@
 /* styleCreateComment.css */
 
+.comment {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 15px;
+    width: 30%; 
+    word-wrap: break-word; 
+    overflow-wrap: break-word; 
+  }
+  
+  
 /* Styling för Lägg till kommentar-knappen */
 .comment-button {
     background-color: #007bff;
